Many UI tweaks:
* Auction:
** Use a green highlight to indicate the next *caller*, same as we use it to indicate the next *player*
** Auction history now appears *above* the bidding box and hand
** Save space during the auction by only showing our hand

* Use a fancy Bootstrap navbar instead of the row of caveman links separated by "|"
* When you log in, if you're currently seated, we just redirect to the hand page

--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -29,3 +29,15 @@
 .throb-div {
   animation: throb 1s infinite;
 }
+
+:root {
+  --navbar-height: 100px;
+}
+
+.navbar {
+  height: var(--navbar-height);
+}
+
+body {
+  padding-top: var(--navbar-height);
+}
