--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -18,7 +18,7 @@
     </head>
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
           {% if user.is_authenticated %}data-viewer="{{ user.player }}"{% endif %}>
-        <nav class="navbar navbar-expand-sm bg-body-tertiary fixed-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
             <div class="container-fluid">
                 <div id="hello-user" class="navbar-brand">
                     {% if user.is_authenticated %}
