--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -29,78 +29,75 @@
                             {{ user }}.
                         {% endif %}
                         {% include "bot-checkbox-partial.html#bot-checkbox-partial" with error_message="" %}
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <input type="submit" value="logout" />
+                            <input type="hidden" name="next" value="/" />
+                        </form>
+                    {% else %}
+                        <a href="{% url 'app:signup' %}">Sign Up</a>
+                        |<a href="{% url 'login' %}">Login</a>
+                    {% endif %}
+                </div>
+                <button class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasNavbar"
+                        aria-controls="offcanvasNavbar"
+                        aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end"
+                     tabindex="-1"
+                     id="offcanvasNavbar"
+                     aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bridge Menu</h5>
+                        <button type="button"
+                                class="btn-close"
+                                data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
                     </div>
-                    <button class="navbar-toggler"
-                            type="button"
-                            data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasNavbar"
-                            aria-controls="offcanvasNavbar"
-                            aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="offcanvas offcanvas-end"
-                         tabindex="-1"
-                         id="offcanvasNavbar"
-                         aria-labelledby="offcanvasNavbarLabel">
-                        <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Bridge Menu</h5>
-                            <button type="button"
-                                    class="btn-close"
-                                    data-bs-dismiss="offcanvas"
-                                    aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body">
-                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "app:home" %}">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "app:lobby" %}">Lobby</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "app:hand-list" %}">Hands</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "app:tournament-list" %}">Tournaments</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "app:board-list" %}">Boards</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "app:table-list" %}">Tables</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url "app:players" %}">Players</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{{ VERSION|gitlab_link }}">version <tt>{{ VERSION }}</tt></a>
-                                </li>
-                            </ul>
-                        </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "app:home" %}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "app:lobby" %}">Lobby</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "app:hand-list" %}">Hands</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "app:tournament-list" %}">Tournaments</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "app:board-list" %}">Boards</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "app:table-list" %}">Tables</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url "app:players" %}">Players</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ VERSION|gitlab_link }}">version <tt>{{ VERSION }}</tt></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-            </nav>
-            {% ifexists debug %}
-            <h2>It's debugging time!!</h2>
-        {% endifexists %}
-        <div class="row">
-            <div class="col"></div>
-            {% block upper-right-column %}
-            {% endblock upper-right-column %}
-        </div>
-        <div class="row">
-            <div class="col">
-                <form method="post" action="{% url 'logout' %}">
-                    {% csrf_token %}
-                    <input type="submit" value="logout" />
-                    <input type="hidden" name="next" value="/" />
-                </form>
-            {% else %}
-                <a href="{% url 'app:signup' %}">Sign Up</a>
-                |<a href="{% url 'login' %}">Login</a>
-            {% endif %}
-        </div>
+            </div>
+        </nav>
+        {% ifexists debug %}
+        <h2>It's debugging time!!</h2>
+    {% endifexists %}
+    <div class="row">
+        <div class="col"></div>
+        {% block upper-right-column %}
+        {% endblock upper-right-column %}
     </div>
+    <div class="row"></div>
     {% if messages %}
         <div>
             <ul class="messages">
