Embarassing bug fix:
Look for a player's name in a *list* of player names, not a *comma-separated string*

[I was looking for a player named "me" in a string like "megan, ana, bob, fred", and finding it :-(]

--- a/project/app/templates/hand_list.html
+++ b/project/app/templates/hand_list.html
@@ -46,7 +46,7 @@
                             <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.table.pk }}</a>
                         </td>
                         <td>
-                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.player_names }}</a>
+                            <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.player_names_string }}</a>
                         </td>
                         <td>
                             <a href="{% url 'app:hand-archive' hand.pk %}">{{ hand.summary_for_this_viewer }}</a>
