Decorate the home page

--- a/project/app/templates/home.html
+++ b/project/app/templates/home.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
     <p>Welcome to the bridge club.</p>
+    <hr>
+    <img height="628"
+         width="875"
+         src="{% static 'app/A_Friend_in_Need_1903_C.M.Coolidge-875w.jpg' %}"
+         alt="A Friend In Need by C.M. Coolidge" />
 {% endblock content %}
