--- a/project/app/templates/chat-partial.html
+++ b/project/app/templates/chat-partial.html
@@ -1,7 +1,7 @@
 {% load partials %}
 {% load player_extras %}
 {% partialdef chat-html-partial %}
-<div id="chat-html-partial">
+<div id="chat-html-partial" style="border: 1px solid;" class="container">
     <div>
         <input autofocus
                id="input"
