Think about improving the placeholder:
Pass a "mode" key into the context for player_list.  Ideally this will tell the template what sorts of buttons should go
on each line.

--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -42,7 +42,11 @@
                                 <input type="submit" value="Table up with these dudes" />
                             </form>
                         {% else %}
-                            hello, I am a placeholder.
+                            {% if mode == 'find_partner' %}
+                                imagine a "partnerup" button here
+                            {% else %}
+                                hello, I am a placeholder.  Our "mode" <tt>{{ mode }}</tt> isn't telling me anything useful.
+                            {% endif %}
                         {% endifexists %}
                     </td>
                 </tr>
