--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -15,7 +15,7 @@
                     <th scope="col">Who</th>
                     <th scope="col">Partner</th>
                     <th scope="col">Where</th>
-                    <th scope="col"></th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
             <tbody class="table-group-divider">
@@ -36,30 +36,13 @@
                                 <a href="{% url 'app:lobby' %}">lobby</a>
                             {% endif %}
                         </td>
-                        <td>
-                            {% ifexists player.maybe_a_link %}
-                            <form method="post"
-                                  action="{% url 'app:new-table' player.pk user.player.pk %}">
-                                {% csrf_token %}
-                                <input type="submit" value="Table up with these dudes" />
-                            </form>
-                        {% else %}
-                            {% if mode == 'find_partner' %}
-                                <button hx-post="{% url 'app:player' pk=player.pk %}"
-                                        hx-swap="none"
-                                        name="action"
-                                        value="partnerup">Partner Up With This Dude</button>
-                            {% else %}
-                                hello, I am a placeholder.  Our "mode" <tt>{{ mode }}</tt> isn't telling me anything useful.
-                            {% endif %}
-                        {% endifexists %}
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    {% include "pagination-controls.html" %}
-{% endblock player_list %}
+                        <td>{{ player.action_button | safe }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% include "pagination-controls.html" %}
+    {% endblock player_list %}
 {% endblock content %}
 {% block scripts %}
     <script>
